# testos

./: .travis.yml  Cargo.toml  bootimgrun.sh  build-1.sh  build-2.sh  build-3.sh  build-test-basic-boot.sh  build-test-sth.sh  run-test-all.sh  run-test-basic-boot.sh  run-test-exception-breakpoint.sh  run-test-exception-double-fault-stack-overflow.sh  run-test-sth.sh  run.sh  test.sh
src/: gdt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
