[package]
name = "testos"
version = "0.1.0"
authors = ["chyyuu <yuchen@tsinghua.edu.cn>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
