[package]
name = "testos"
version = "0.1.0"
authors = ["chyyuu <yuchen@tsinghua.edu.cn>"]

[features]
integration-test = []

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

[dev-dependencies]
array-init = "0.0.3" #provides a safe interface for the Volatile wrapper 

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
spin = "0.4.6"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]